--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -34,4 +34,4 @@ jobs:
         uses: actions/upload-artifact@master
         with:
           name: jar
-          path: build/libs/Galaxy-Lib-1.0-SNAPSHOT.jar
+          path: build/libs/*.jar
