--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -1,4 +1,4 @@
-name: Galaxy Actions
+name: Build
 on: [push, pull_request]
 
 jobs:
@@ -12,9 +12,10 @@ jobs:
         uses: gradle/wrapper-validation-action@v1
 
       - name: JDK
-        uses: actions/setup-java@v1
+        uses: actions/setup-java@v2
         with:
-          java-version: '15'
+          distribution: 'adopt'
+          java-version: '17'
 
       - name: cache
         uses: actions/cache@v2
@@ -22,7 +23,6 @@ jobs:
           path: |
             ~/.gradle/caches
             ~/.gradle/wrapper
-            .gradle/loom-cache
           key: caches-${{ hashFiles('build.gradle.kts', 'gradle/wrapper/gradle-wrapper.properties') }}
           restore-keys: |
             caches-
