--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -6,19 +6,19 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
-        uses: actions/checkout@v2
+        uses: actions/checkout@v3
 
       - name: Validation
         uses: gradle/wrapper-validation-action@v1
 
       - name: JDK
-        uses: actions/setup-java@v2
+        uses: actions/setup-java@v3
         with:
-          distribution: 'adopt'
+          distribution: 'temurin'
           java-version: '17'
 
       - name: cache
-        uses: actions/cache@v2
+        uses: actions/cache@v3
         with:
           path: |
             ~/.gradle/caches
@@ -31,7 +31,7 @@ jobs:
         run: ./gradlew --no-daemon build
 
       - name: Upload-Artifact
-        uses: actions/upload-artifact@v2
+        uses: actions/upload-artifact@v3
         with:
           name: jar
           path: build/libs/*.jar
